# robotrainer_automatic_assessment_pytorch

./: .gitignore  README.md  clean_setup_files.sh  install.sh  project.env  project.repos
docker/: Dockerfile  Dockerfile.base  build.sh  run.sh
project/automatic_assessment/: .gitignore  README.md  pyproject.toml
project/automatic_assessment/src/automatic_assessment/: data_preprocessing.py  dataset.py  datasets.py  experimental_pytorch.py  hyperparameters.py  imputers.py  main.py  main_pytorch.py  models.py  visualize_results.py
project/automatic_assessment/src/automatic_assessment/archiv/: data_preprocessing.py
project/automatic_assessment/src/automatic_assessment/philipp_examples/: SEWdataset.py  base_trainer.py  dataloader.py  early_stopping.py  trainer.py
project/automatic_assessment/src/automatic_assessment/sklearn/: datasets.py  main.py  models.py  visualization.py
setup/: cli_color_scheme.env  install_gum.sh  install_vscode_extensions.py  recommend_project_extensions.py  set_env.sh
setup/snippets/pytorch/: Dockerfile.PytorchFromSource
setup/snippets/ros/: Dockerfile.ROS  extensions.json.ros  readme.ros.md
tasks/: build_base.sh  build_user.sh  build_user_from_hub.sh  clone_from_file.sh  connect_to_docker_bash.sh  connect_to_docker_zsh.sh  docker_clean.sh  parse_repos.py  pull_subs.sh  push_base_to_hub.sh  push_subs.sh  run_detached.sh  run_docker.sh  source_env.sh  stitch_md.sh  stop_docker.sh
