[project]
name = "automatic-assessment"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreasZachariae",email = "Andreas.Zachariae@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["scikit-learn (>=1.7.2,<2.0.0)", "pandas (>=2.3.3,<3.0.0)", "matplotlib (>=3.10.7,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "scikit-optimize (>=0.10.2,<0.11.0)"]

[tool.poetry]
packages = [{include = "automatic_assessment", from = "src"}]

[tool.poetry.scripts]
# Syntax: script-name = "package.module:function"
main = "automatic_assessment.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
